--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "cisat"
 version = "0.1.0"
 authors = ["Chris McComb <ccmcc2012@gmail.com>"]
 edition = "2018"
+description = "Cognitively-Inspired Simulated Annealing Teams"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
