--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ description = "Cognitively-Inspired Simulated Annealing Teams"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.3"
+rand_distr = "0.4.0"
