Ooops wrong location for github

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Chris McComb <ccmcc2012@gmail.com>"]
 edition = "2018"
 description = "Cognitively-Inspired Simulated Annealing Teams"
 readme = "README.md"
-repository = "https://github.com/cmccomb/cisat-rs"
-homepage = "https://github.com/cmccomb/cisat-rs"
+repository = "https://github.com/THREDgroup/cisat-rs"
+homepage = "https://github.com/THREDgroup/cisat-rs"
 documentation = "https://docs.rs/cisat-rs"
 license = "MIT"
 keywords = ["simulation", "engineering-design", "teams", "agent-based-modeling"]
