--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cisat"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Chris McComb <ccmcc2012@gmail.com>"]
 edition = "2018"
 description = "Cognitively-Inspired Simulated Annealing Teams"
@@ -19,6 +19,8 @@ rand_distr = "0.4.0"
 strum = "0.20"
 strum_macros = "0.20"
 trussx = "0.1.3"
+structopt = "0.3.21"
+indicatif = "0.15.0"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--document-private-items"]
