--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ strum_macros = "0.20"
 trussx = "0.1.3"
 structopt = "0.3.21"
 indicatif = "0.15.0"
+rayon = "1.5.0"
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--document-private-items"]
