--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ indicatif = "0.15.0"
 rayon = "1.5.0"
 
 [package.metadata.docs.rs]
-rustdoc-args = ["--document-private-items"]
+#rustdoc-args = ["--document-private-items"]
