--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,17 @@ license = "MIT"
 keywords = ["simulation", "engineering-design", "teams", "agent-based-modeling"]
 categories = ["mathematics", "science", "simulation"]
 
+#[lib]
+#name            = "cisat"
+#crate-type      = ["cdylib"]
+
 [dependencies]
 rand = "0.8.3"
 rand_distr = "0.4.0"
-trussx = "0.1.3"
 structopt = "0.3.21"
-indicatif = "0.15.0"
+indicatif = {version = "0.15.0", features = ["rayon"]}
 rayon = "1.5.0"
+trussx = {git="https://github.com/cmccomb/trussx"}
 
 [package.metadata.docs.rs]
 #rustdoc-args = ["--document-private-items"]
